--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react242",
   "version": "0.1.0",
+  "homepage": "https://oshumate.github.io/react242",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -11,11 +12,14 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
